--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,13 @@ body {
   display: block;
 }
 
+.form-control label,
+.form-control input,
+.form-control textarea {
+  width: 100%;
+  display: block;
+}
+
 .form-control label {
   margin-bottom: 0.5rem;
 }
